--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,22 +1,21 @@
 
 
 
-
-
-
 /* public/css/home.css */
 .hero-section {
     background-color: #000;
     color: white;
-    padding: 120px 20px;
+    padding: 40px 20px;
     text-align: center;
-    margin-top: 80px;
+    margin-top: 0px;
 }
+
+
 
 .hero-section h1 {
     font-family: 'Roboto', sans-serif;
-    font-size: 48px;
-    margin-bottom: 30px;
+    font-size: 68px;
+    margin-bottom: 150px;
     font-weight: 500;
 }
 
@@ -121,40 +120,46 @@
     }
  }
 
-
-
-
-
-.wow {
-    visibility: visible !important;
-    transition: opacity 0.5s ease-out;
+ .image-container {
+    position: relative;
+    height: 100vh; /* Full viewport height to ensure there's a reference point */
 }
 
-.wow.fade-out {
-    opacity: 0;
+.center-image {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 147px;
 }
 
-.wow.fade-in {
-    opacity: 1;
+.bg-left-1 {
+    position: absolute;
+    left: 0px;
+    bottom: -100px;
+    z-index: 1; /* Ensure these images are behind other content */
+    width: auto; /* Adjust as needed based on your design */
+    height: auto;
+    background-size: contain;
+
 }
 
+.bg-left-2 {
+    position: absolute;
+    left: 200px;
+    bottom:250px;
+    z-index: 1; /* Ensure these images are behind other content */
+    width: auto; /* Adjust as needed based on your design */
+    height: auto;
+    background-size: contain;
+}
 
-
-@keyframes slightZoomIn {
-    from {
-        opacity: 0;
-        transform: scale(0.95); /* Starts at 95% size */
-    }
-    to {
-        opacity: 1;
-        transform: scale(1); /* Ends at 100% size */
-    }
- }
-
- .card.wow {
-    animation-name: slightZoomIn !important;
-    animation-duration: 0.8s; /* Slightly longer duration for smoother effect */
-    animation-timing-function: ease-out;
- }
-
-
+.bg-left-3 {
+    position: absolute;
+    left: 370px;
+    bottom:100px;
+    z-index: 1; /* Ensure these images are behind other content */
+    width: auto; /* Adjust as needed based on your design */
+    height: auto;
+    background-size: contain;
+}
