--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -20,21 +20,22 @@ body {
 }
 
 .nav-container {
-    max-width: 1200px;
-    margin: 0 auto;
+    max-width: 90%;
+    margin: 0 50px 0 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height:70px;
 }
 
 .logo img {
-    height: 40px;
+    height: 50px;
     width: auto;
 }
 
 .nav-links {
     display: flex;
-    gap: 6rem;
+    gap: 8rem;
     align-items: center;
 }
 
@@ -82,7 +83,7 @@ body {
     border: none;
     color: #fff;
     cursor: pointer;
-    margin-left: 1rem;
+    margin-right: 1rem;
     padding: 0;
 }
 
@@ -115,7 +116,7 @@ body {
 .main-footer {
     background-color: #1a2332;
     color: white;
-    padding: 60px 0 20px 0;
+    padding: 60px 0 0px 0;
     font-family: 'Roboto', sans-serif;
     margin: 60px 0 0 0 ; /* Add this */
     width: 100%; /* Add this */
@@ -126,7 +127,7 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 40px;
     left: 0;
 }
@@ -137,7 +138,7 @@ body {
 }
 
 .footer-logo {
-    height: 40px;
+    height: 50px;
     margin-bottom: 20px;
 }
 
@@ -204,7 +205,7 @@ body {
     justify-content: flex-end;
     align-items: center;
     gap: 20px;
-    margin-top: 40px;
+    margin-top: -210px;
 }
 
 .certification-text {
@@ -227,9 +228,9 @@ body {
 .footer-copyright {
     font-family: 'Roboto', sans-serif;
     text-align: center;
-    padding-top: 20px;
-    margin-top: 20px;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    padding-top: 0;
+    margin-top: -30px;
+    margin-bottom: 50px;
     color: #a0aec0;
     font-size: 14px;
 }
