--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,64 +1,93 @@
 /* public/css/home.css */
+
+/* Hero Section Styles */
 .hero-section {
-    background-color: #000;
-    color: white;
-    padding-top: 40px;
-    padding-bottom: 20px;
-    text-align: left;
-    margin-top: 120px;
     position: relative;
-    margin-bottom: 0px;
+    width: 100%;
+    height: 700px;
+    overflow: hidden;
+}
+
+.video-background {
+    position: absolute;
+    top: -290px;
+    left: 0;
+    width: 100%;
+    height: calc(100% + 600px);
+    object-fit: cover;
+    z-index: -10;
+
+    -webkit-mask-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 1) 60%,
+        rgba(0, 0, 0, 0) 100%
+    );
+    mask-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 1) 60%,
+        rgba(0, 0, 0, 0) 100%
+    );
+}
+
+.hero-section::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: linear-gradient(to top,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0.8) 30%,
+        rgba(0, 0, 0, 0) 100%
+    );
+    z-index: -5;
+}
+
+@media screen and (max-width: 768px) {
+    .video-background {
+        width: auto;
+        min-width: 100%;
+        height: calc(100% + 600px);
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
 
 
 
-
-
-.hero-section h1 {
+.center-text{
+    position: absolute;
     font-family: 'Roboto', sans-serif;
     font-size: 56px;
-    margin-bottom: 150px;
-    font-weight: 500;
-    padding-left: 70px;
-}
-
-/* Background circles positioning */
-.bg-left-1 {
-    position: absolute;
-    right: 100px;
-    bottom: -50px;
-    z-index: -1;
-}
-
-.bg-left-2 {
-    position: absolute;
-    right: 100px;
-    bottom: 300px;
-    z-index: 1;
-}
-
-.bg-left-3 {
-    position: absolute;
-    right: -20px;
-    bottom: 200px;
-    z-index: 1;
+    bottom: 100px;
+    padding-left: 50px;
+    color: #FFFFFF;
 }
 
 .center-image {
     position: absolute;
-    top: 60%;
-    transform: translate(70px, 40px);
-    width: 147px;
+    height: 58px;
+    bottom: 60px;
+    padding-left: 50px;
 }
-
-
 
 
 
 .headline-section {
-    padding-top: 0;
-    padding-bottom: 80px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
+
+.headline-section-two {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #18181B;
+}
+
+
 
 .headline-grid {
     display: grid;
@@ -78,7 +107,24 @@
     flex-direction: column;
 }
 
+.headline-card-two {
+    padding-left: 24px;
+    padding-right: 24px;
+    border-radius: 0px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
 .headline-card h1 {
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    font-size: 16px;
+    margin-bottom: 5px;
+    font-weight: 100;
+}
+
+.headline-card-two h1{
     font-family: 'Roboto', sans-serif;
     color: white;
     font-size: 16px;
@@ -91,14 +137,29 @@
     border-right: 1px solid #3F3F46;
 }
 
+.headline-card-two.middle-border {
+    border-left: 1px solid #3F3F46;
+    border-right: 1px solid #3F3F46;
+}
+
 .headline-card h2 {
     font-family: 'Roboto', sans-serif;
     color: white;
     font-size: 28px;
+    margin-top: 0px;
     margin-bottom: -10px;
     font-weight: 500;
 }
 
+.headline-card-two h2 {
+    font-family: 'Roboto', sans-serif;
+    color: #EFA32F;
+    font-size: 64px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    text-align: center;
+}
 
 .headline-card p {
     font-family: 'Roboto', sans-serif;
@@ -148,7 +209,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
-    padding: 0 40px;
+    padding: 20px 20px 0;
     max-width: 1600px;
     margin: 0 auto;
 }
