--- a/public/css/media.css
+++ b/public/css/media.css
@@ -186,27 +186,28 @@
 .hero-section {
     position: relative;
     width: 100%;
-    height: 710px;
-    margin-top: 0px;
+    height: 700px;
+    overflow: hidden;
 }
 
 .video-background {
     position: absolute;
-    top: 0;
+    top: -420px;
     left: 0;
     width: 100%;
-    height: 700px;
+    height: calc(100% + 600px);
     object-fit: cover;
-    object-position: center -325px;
     z-index: -10;
 }
 
-.hero-content {
-    position: relative;
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-    text-align: center;
+@media screen and (max-width: 768px) {
+    .video-background {
+        width: auto;
+        min-width: 100%;
+        height: calc(100% + 600px);
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
 
 .center-image {
