--- a/public/css/home.css
+++ b/public/css/home.css
@@ -74,6 +74,11 @@
     padding-left: 50px;
 }
 
+.center-image-newsletter {
+    position: relative;
+    height: 58px;
+}
+
 
 
 .headline-section {
