--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,30 +1,42 @@
 /* Search Section Styles */
-.search-section {
-    max-width: 1600px;
-    margin: 0 auto;
-    padding: 0 20px;
-    margin-bottom: 40px;
-    margin-top: -70px;
-    text-align: center;
+
+.search-input-container {
+    position: relative;
+    display: inline-block;
 }
 
 .search-input {
     font-family: 'Roboto', sans-serif;
     width: 400px;
     padding: 12px 20px;
-    border: none;
+    padding-right: 40px;
+    border: 1px solid #FFFFFF;
     border-radius: 4px;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.3);
     color: white;
     font-size: 16px;
     margin-bottom: 50px;
+}
+
+.search-input:focus {
+    outline: none;
+    border-color: #FFFFFF;
+}
+
+.search-input-icon {
+    position: absolute;
+    right: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(255, 255, 255, 0.5);
+    pointer-events: none;
+    margin-top: -25px;
 }
 
 .search-input::placeholder {
     color: rgba(255, 255, 255, 0.5);
 }
 
-/* Category Filter Styles */
 .category-filters {
     display: flex;
     gap: 48px;
@@ -59,7 +71,6 @@
     height: 2px;
     background-color: #FFD700;
 }
-
 
 
 
@@ -381,43 +392,112 @@
 
 
 /* Hero Section Styles */
+
 .hero-section {
-    color: white;
-    padding: 40px 20px;
-    text-align: center;
-    margin-top: 400px;
     position: relative;
-    margin-bottom: 40px;
+    width: 100%;
+    height: 700px;
+    overflow: hidden;
 }
 
-.bg-left-1 {
+.video-background {
     position: absolute;
-    left: 0px;
-    bottom: -100px;
-    z-index: 1;
+    top: -420px;
+    left: 0;
+    width: 100%;
+    height: calc(100% + 600px);
+    object-fit: cover;
+    z-index: -10;
+
+    -webkit-mask-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 1) 60%,
+        rgba(0, 0, 0, 0) 100%
+    );
+    mask-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 1) 60%,
+        rgba(0, 0, 0, 0) 100%
+    );
 }
 
-.bg-left-2 {
+.hero-section::after {
+    content: '';
     position: absolute;
-    left: 200px;
-    bottom: 250px;
-    z-index: 1;
-}
-
-.bg-left-3 {
-    position: absolute;
-    left: 370px;
-    bottom: 100px;
-    z-index: 1;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50%;
+    background: linear-gradient(to top,
+        rgba(0, 0, 0, 1) 0%,
+        rgba(0, 0, 0, 0.8) 30%,
+        rgba(0, 0, 0, 0) 100%
+    );
+    z-index: -5;
 }
 
 .center-image {
     position: absolute;
-    top: 60%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 125px;
-    margin-top: -150px;
+    margin-top: -50px;
+}
+
+.center-search {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    bottom: 90px;
+    height: 125px;
+    margin-top: 0px;
+    text-align: center;
+}
+
+.search-input-container {
+    position: relative;
+    display: inline-block;
+}
+
+
+
+.category-filters {
+    display: flex;
+    gap: 48px;
+    margin-bottom: 40px;
+    padding-bottom: 8px;
+    padding-top: 95px;
+    justify-content: center;
+}
+
+.filter-link {
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    padding-bottom: 16px;
+    position: relative;
+    width:200px;
+}
+
+.filter-link.active {
+    color: #FFD700;
+    font-family: 'Roboto', sans-serif;
+}
+
+.filter-link.active::after {
+
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #FFD700;
 }
 
 
@@ -427,7 +507,18 @@
     color: white;
     text-align: center;
     position: relative;
-    margin-bottom: 40px;
+    margin-bottom: 110px;
+}
+
+.center-text {
+    position: relative;
+    font-family: 'Roboto', sans-serif;
+    color: #FFFFFF;
+    font-size: 56px;
+    font-weight: 350;
+    text-align: center;
+    margin-left: 90px;
+    margin-right: 90px;
 }
 
 .center-mid-image {
@@ -451,17 +542,7 @@
     );
 }
 
-.center-text {
-    position: absolute;
-    font-family: 'Roboto', sans-serif;
-    color: #FFFFFF;
-    font-size: 68px;
-    font-weight: 500;
-    top: 440px;
-    text-align: left;
-    margin-left: 90px;
-    margin-right: 90px;
-}
+
 
 
 
@@ -480,7 +561,7 @@
 
 .counter-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     max-width: 1600px;
     margin: 0 auto;
     padding: 0 40px;
@@ -510,11 +591,12 @@
 
 .counter-card h2 {
     font-family: 'Roboto', sans-serif;
-    color: white;
+    color: #EFA32F;
     font-size: 64px;
     font-weight: 500;
     margin-top: 20px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 
@@ -1024,6 +1106,3 @@
 .newsletter-button:hover {
     background-color: #D97706;
 }
-
-
-
